@@ -15,6 +15,8 @@ o -squeeze processes xobjects inside xobjects
 o Speed increases for -squeeze on huge files
 o Select only such pages as are annotated
 o Allow -create-pdf and friends to appear in middle of AND
+o Allow the empty range
+o Allow a range specifying some pages which do not exist
 
 Fixes:
 
